# pipy

./: .gitignore  AUDIT.md  CLAUDE.md  README.md  UPDATE_PI_PORTS.md  pipy-agent.md  pipy-ai.md  pipy-coding-agent.md  pipy-tui.md  pyproject.toml
agent/: .gitignore  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
agent/src/pipy_agent/: __init__.py  agent.py  loop.py  types.py
agent/tests/: __init__.py  test_agent.py  test_live.py  test_loop.py  test_types.py
ai/: .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
ai/.github/workflows/: ci.yml
ai/src/pipy_ai/: __init__.py  abort.py  api.py  provider.py  stream.py  types.py
ai/src/pipy_ai/cli/: main.py
ai/src/pipy_ai/oauth/: __init__.py  _litellm_patch.py  anthropic.py  github_copilot.py  google_gemini.py  openai_codex.py  pkce.py  registry.py  types.py
ai/src/pipy_ai/registry/: __init__.py  registry.py  schema.py  sync.py
ai/tests/: __init__.py  conftest.py  test_abort.py  test_api.py  test_integration.py  test_oauth.py  test_oauth_github_copilot.py  test_oauth_litellm_patch.py  test_oauth_openai_codex.py  test_provider.py  test_registry.py  test_stream.py  test_types.py
coding-agent/: .gitignore  CHANGELOG.md  PORT_STATUS.md  README.md  pyproject.toml
coding-agent/src/pipy_coding_agent/: __init__.py  auth_storage.py  cli.py  slash_commands.py  tui_app.py
coding-agent/src/pipy_coding_agent/agent/: __init__.py  model_resolver.py  session.py
coding-agent/src/pipy_coding_agent/compaction/: __init__.py  compact.py  cut_point.py  file_ops.py  prepare.py  summarize.py  tokens.py
coding-agent/src/pipy_coding_agent/extensions/: __init__.py  hooks.py  loader.py
coding-agent/src/pipy_coding_agent/prompt/: __init__.py  builder.py
coding-agent/src/pipy_coding_agent/resources/: __init__.py  loader.py  prompts.py  skills.py
coding-agent/src/pipy_coding_agent/session/: __init__.py  context.py  entries.py  manager.py
coding-agent/src/pipy_coding_agent/settings/: __init__.py  manager.py  resolve_config_value.py  types.py
coding-agent/src/pipy_coding_agent/tools/: __init__.py  bash.py  edit.py  find.py  grep.py  ls.py  path_utils.py  read.py  truncate.py  write.py
coding-agent/tests/: __init__.py  test_auth_storage.py  test_cli.py  test_resolve_config_value.py
coding-agent/tests/test_agent/: __init__.py  test_model_resolver.py  test_session.py
coding-agent/tests/test_compaction/: __init__.py  test_compact.py  test_cut_point.py  test_file_ops.py  test_summarize.py  test_tokens.py
coding-agent/tests/test_extensions/: __init__.py  test_hooks.py  test_loader.py
coding-agent/tests/test_prompt/: __init__.py  test_builder.py
coding-agent/tests/test_resources/: __init__.py  test_loader.py  test_prompts.py  test_skills.py
coding-agent/tests/test_session/: test_context.py  test_entries.py  test_manager.py
coding-agent/tests/test_settings/: __init__.py  test_manager.py
coding-agent/tests/test_tools/: __init__.py  test_bash.py  test_edit.py  test_find.py  test_grep.py  test_ls.py  test_read.py  test_truncate.py  test_write.py
scripts/: ask.py  test-all.sh
tui/: CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
tui/src/pipy_tui/: __init__.py  autocomplete.py  editor.py  fuzzy.py  keybindings.py  utils.py
tui/src/pipy_tui/widgets/: __init__.py
tui/tests/: __init__.py  test_autocomplete.py  test_editor.py  test_fuzzy.py  test_keybindings.py  test_utils.py
