[project]
name = "pipy-agent"
version = "0.51.6"
description = "Agent framework with tool execution, built on pipy-ai. Python port inspired by Mario Zechner's pi-mono/agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Donald Thompson", email = "donald@witt3rd.com" }]
keywords = ["llm", "ai", "agent", "tools", "pipy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pipy-ai>=0.51.6",
]

[tool.uv.sources]
pipy-ai = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/witt3rd/pipy"
Repository = "https://github.com/witt3rd/pipy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipy_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince211",  # litellm's issue, not ours
    "ignore::DeprecationWarning:aiohttp",           # aiohttp cleanup_closed
]

[tool.ruff]
line-length = 100
target-version = "py313"
