[project]
name = "pipy-coding-agent"
version = "0.1.0"
description = "AI coding assistant - Python port of @mariozechner/pi-coding-agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Donald Thompson", email = "donald.thompson@gmail.com" }]
keywords = ["ai", "coding", "assistant", "llm", "agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pipy-ai",
    "pipy-agent",
    "pydantic>=2.0",
    "aiofiles>=24.0",
]

[tool.uv.sources]
pipy-ai = { workspace = true }
pipy-agent = { workspace = true }
pipy-tui = { workspace = true }

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.5"]
tui = ["pipy-tui", "textual>=0.50.0"]

[project.scripts]
pipy-coding-agent = "pipy_coding_agent.cli:main"

[project.urls]
Homepage = "https://github.com/witt3rd/pipy"
Repository = "https://github.com/witt3rd/pipy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipy_coding_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
